--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   ],
   
   "devDependencies": {
-    "turbo": "^2.5.8"
+    "turbo": "^2.5.8",
+    "next": "15.5.4",
+    "react": "19.1.0",
+    "react-dom": "19.1.0"
   }
 }
