--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,4 @@
 {
-  "buildCommand": "pnpm turbo run build --filter=./apps/web",
+  "buildCommand": "pnpm turbo run build --filter=web",
   "outputDirectory": "apps/web/.next"
 }
